test/bad/classes/cmp01.px

class A def
    x: Int

class B def
    x: Int

A() == B()
